--- a/index.html
+++ b/index.html
@@ -1,26 +1,49 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>css exercise four</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    <section class="container">
-      <h1>Modern luxury <span class="emphasis">travel</span></h1>
-      <div class="preview baku">
-        <h1>Baku</h1>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>css exercise four</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+</head>
+<body>
+<!--HEADER-->
+  <div id="header">
+    <h1>Modern luxury <span class="emphasis">travel</span></h1>
+  </div>
+  <!--PAGE CONTENT-->
+  <section class="container">
+    <div class="row">
+      <div class="col-3 col-s-3 menu">
+            <div class="previewbaku">
+              <img src="images/baku.jpg" alt "backu">
+              <div class="top-left">
+                <h1>Baku</h1>
+              </div>
+            </div>
+            <div class="previewlondon">
+              <img src="images/london.png" alt "london">
+              <div class="top-left">
+                <h1>London</h1>
+              </div>
+            </div>
+            <div class="previewmadrid">
+              <img src="images/madrid.jpg" alt "madrid">
+              <div class="top-left">
+                <h1>Madrid</h1>
+              </div>
+            </div>
+            <div class="previewrome">
+              <img src="images/rome.jpg" alt "rome">
+              <div class="top-left">
+                <h1>Rome</h1>
+              </div>
+            </div>
       </div>
-      <div class="preview london">
-        <h1>London</h1>
-      </div>
-      <div class="preview madrid">
-        <h1>Madrid</h1>
-      </div>
-      <div class="preview rome">
-        <h1>Rome</h1>
-      </div>
-    </section>
-  </body>
+    </div>
+  </section>
+</body>
+
 </html>
