--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-
-  <!DOCTYPE html>
+<!DOCTYPE html>
   <html>
     <head>
       <meta charset="utf-8">
-      <title>Media Queries</title>
+      <title>css exercise four</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="css/reset.css">
       <link rel="stylesheet" href="css/style.css">
